Fix logo spacing in responsive view

--- a/assets/flywaydb.css
+++ b/assets/flywaydb.css
@@ -64,6 +64,7 @@
 
 #tabs {
     float: right;
+    margin-top: 30px;
 }
 
 #big-sell {
